<resources>
    <string name="about">By @bicnicfr</string>
    <string name="about_title">About TMH</string>
    <string name="about_flags_copyright">Flags by: </string>
    <string name="back">Back</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="minus_symbol">-</string>
    <string name="plus_symbol">+</string>
    <string name="currency_code">Code</string>
    <string name="app_name">Traveler Money Helper</string>
    <string name="error">Error</string>
    <string name="error_add_object">Unable to add object, errors in fields !</string>
    <string name="error_no_category">No category is defined, please create one !</string>
    <string name="error_currency_update">Error updating currency, code not found</string>
    <string name="error_no_oer_api_key">To use currencies, please create an account on the following website : http://openexchangerates.org (it is free for personal use). Create and copy the API key (App ID) you will get.</string>
    <string name="error_network_issue">Network problem or network not available, please retry</string>
    <string name="error_oer_apikey_invalid">API key is invalid, please correct !</string>
    <string name="fragment_title_edition_category">Category edition</string>
    <string name="fragment_title_edition_currency">Currency edition</string>
    <string name="fragment_title_edition_operation">Operation edition</string>
    <string name="fragment_title_edition_account">Account edition</string>
    <string name="fragment_title_edition_withdrawal">Withdrawal edition</string>
    <string name="fragment_title_manage_category">Categories</string>
    <string name="fragment_title_manage_currency">Currencies</string>
    <string name="fragment_title_manage_operation">Operations</string>
    <string name="fragment_title_viewpager_operation">Operations</string>
    <string name="fragment_title_manage_account">Accounts</string>
    <string name="fragment_title_statistics">Statistics</string>
    <string name="fragment_title_category_chooser">Categories</string>
    <string name="fragment_title_currency_converter">Currency converter</string>
    <string name="fragment_title_preferences">Settings</string>
    <string name="account_icon_edit_dialog_title">Choose an icon from …</string>
    <string name="manageable_obj_del_confirm_question">Are you sure you want to delete these objects ?</string>
    <string name="manageable_obj_del_error">One or more objects could not be deleted</string>
    <string name="name">Name</string>
    <string name="long_name">Long name</string>
    <string name="short_name">Short name</string>
    <string name="form_addedit_value">Value for 1</string>
    <string name="form_addedit_update">Set last update to now</string>
    <string name="type">Type</string>
    <string name="account">Account</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="currency">Currency</string>
    <string name="accountname">Account name</string>
    <string name="icon">Icon</string>
    <string name="cancel">Cancel</string>
    <string name="close">X</string>
    <string name="browse">…</string>
    <string name="dialog_choose_icon">Choose an icon</string>
    <string name="dialog_choose_account">Choose an account</string>
    <string name="dialog_choose_currency">Choose a currency</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edition">Edition</string>
    <string name="categories">Categories</string>
    <string name="categories_exception">Categories exception</string>
    <string name="currencies">Currencies</string>
    <string name="accounts">Accounts</string>
    <string name="home">Home</string>
    <string name="parameters">Parameters</string>
    <string name="refresh">Refresh</string>
    <string name="popup_default_icon">Default icon</string>
    <string name="popup_app_icon">App icon</string>
    <string name="popup_flag_icon">Flags library</string>
    <string name="popup_url">URL</string>
    <string name="popup_camera">Camera</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="save_and_add">Save and add</string>
    <string name="toast_success">Operation successfully completed</string>
    <string name="pick_account">Pick an account</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="not_implemented">This feature is not implemented yet</string>
    <string name="validate">Validate</string>
    <string name="hint_flag_autocompletion">Use this autocompletion field to choose a country flag</string>
    <string name="hint_currency_autocompletion">Use this autocompletion field to choose a currency</string>
    <string name="country">Country</string>
    <string name="country_not_found">Country not found !</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="default_account_name">Account1</string>
    <string name="confirm_modification">Do you confirm the modification ?</string>
    <string name="total">Total:</string>
    <string name="total_card">Total card:</string>
    <string name="total_">Total</string>
    <string name="average">Average:</string>
    <string name="average_">Average</string>
    <string name="averageByDay">Average / day:</string>
    <string name="averageByDay_">Average / day</string>
    <string name="force_update_currency">Force update rates</string>
    <string name="date">Date</string>
    <string name="database_created_and_selected_successfully">Database created and selected</string>
    <string name="database_created_successfully">Database created successfully</string>
    <string name="databases_deleted_successfully">Database(s) deleted successfully</string>
    <string name="database_renamed_successfully">Database renamed successfully</string>
    <string name="database_export_failed">Database export failed</string>
    <string name="database">Database</string>
    <string name="new_database">New database</string>
    <string name="select_database">Select database to use</string>
    <string name="enter_database_name">Enter a database name</string>
    <string name="new_database_summary">Add a new Database</string>
    <string name="menu_item_more">More</string>
    <string name="menu_item_period">Period / Month</string>
    <string name="menu_item_now">Today</string>
    <string name="menu_item_choose_month">Other month</string>
    <string name="menu_item_withdrawal">Widthdrawal</string>
    <string name="menu_item_auto">Auto dates</string>
    <string name="today">Today</string>
    <string name="default_category_withdrawal_name">Withdrawal</string>
    <string name="default_category_withdrawal_summary">Select default category for withdrawal</string>
    <string name="default_category_withdrawal">Withdrawal category</string>
    <string name="default_account_summary">Enter the default account</string>
    <string name="default_account_title">Default account</string>
    <string name="oer_api_key_summary">Enter Open Exchange Rates API key</string>
    <string name="oer_api_key_title">Open Exchange Rates API</string>
    <string name="export_db_title">Export database</string>
    <string name="export_db_summary">Export current database to a file</string>
    <string name="import_db_title">Import database</string>
    <string name="import_db_summary">Import a backuped database</string>
    <string name="warning">Warning</string>
    <string name="default_category_warning">Choose a default category for withdrawal (inside preferences)</string>
    <string name="set_to_today_button">Today\'s date</string>
    <string name="balance">Balance:</string>
    <string name="dashboard_operation">Operations</string>
    <string name="dashboard_stats">Statistics</string>
    <string name="welcome_hint">Some elements must be created in order to use this application :</string>
    <string name="welcome_letsgo_button">Let\'s go !</string>
    <string name="welcome_button">Go</string>
    <string name="welcome_category">Create a category</string>
    <string name="welcome_currency">Create a currency</string>
    <string name="welcome_account">Create an account</string>
    <string name="update">Update</string>
    <string name="graph">Graph</string>
    <string name="refreshing">Refreshing</string>
    <string name="auto">Auto</string>
    <string name="operation_list_type">Month / all</string>
    <string name="operation_all_main_title">Operations</string>
    <string name="operation_all_sub_title">All displayed</string>
    <string name="converter">Converter</string>
    <string name="rates_last_update">Last update :</string>
    <string name="update_rates_failed">Error updating rates from the internet</string>
    <string name="update_rates_success">Rates updated OK</string>
    <string name="misc">Misc</string>
    <string name="NA">N/A</string>
    <string name="add_or_edit_operation_use_credit_debit_card_cash">Cash</string>
    <string name="add_or_edit_operation_use_credit_debit_card_card">Card</string>
    <string name="gdrive_button_sign_out">Sign out</string>
    <string name="use_local_currency_value">Use local currency rate</string>
    <string name="exchange_rate_group_title">Currency rate options</string>
    <string name="exchange_rate_update_from_internet">Update exchange rate to current</string>
    <string name="exchange_rate_update_from_local_operation">Keep exchange rate as is</string>
    <string name="exchange_rate_update_from_local_currency">Use local currency rate</string>
    <string name="backup_notification_waiting_for_network">Waiting for network connectivity</string>
    <string name="backup_notification_timeout_waiting_for_network">Timeout waiting for network</string>
    <string name="backup_notification_backup_in_progress">Backup in progress</string>
    <string name="backup_notification_google_not_signed_in">Not signed in to Google account!</string>
    <string name="backup_boot_notification_title">Next backup schedule</string>
    <string name="backup_restore_no_content_found">This folder is empty!</string>
    <string name="backup_restore_confirmation_message">Are you sure you want to restore</string>
    <string name="drive_restore_results_title">Available backups</string>
    <string name="days">day(s)</string>
    <string name="button_choose_currency">Or choose a standard currency</string>
    <string name="update_currency_popup_title">Updating currencies</string>
    <string name="stats_item_cat_auto">Reset categories filtering</string>
    <string name="date_change_begin">Change begin date</string>
    <string name="date_change_end">Change end date</string>
    <string name="date_change_reset">Reset begin / end dates</string>
    <string name="pref_import_db_filename">File path to import</string>
    <string name="pref_import_db_name">DB name to create</string>
    <string name="pref_title_persistence">Persistence</string>
    <string name="pref_title_default_parameters">Default parameters</string>
    <string name="pref_title_api_configuration">API configuration</string>
    <string name="pref_title_import_export">Import / export</string>
    <string name="pref_db_manager_title">Database manager</string>
    <string name="pref_db_manager_summary">Delete a database</string>
    <string name="pref_backup_category">Backups</string>
    <string name="dialog_prefs_drive_automatic_backup_title">Save to Google Drive</string>
    <string name="dialog_prefs_drive_automatic_backup_option_never">Never save automatically</string>
    <string name="dialog_prefs_drive_automatic_backup_option_daily">Backup daily</string>
    <string name="dialog_prefs_drive_automatic_backup_option_weekly">Backup weekly</string>
    <string name="dialog_prefs_drive_automatic_backup_option_monthly">Backup monthly</string>
</resources>