<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginTop="20dp"
    android:layout_height="match_parent">

    <PreferenceCategory
        android:title="@string/pref_title_persistence"
        app:icon="@drawable/ic_baseline_analytics_24">
        <ListPreference
            android:id="@+id/database"
            android:defaultValue="0"
            android:key="database"
            android:summary="@string/select_database"
            android:title="@string/database" />

        <EditTextPreference
            android:id="@+id/new_database"
            android:defaultValue=""
            android:dialogMessage="@string/enter_database_name"
            android:dialogTitle="@string/new_database"
            android:key="new_database"
            android:summary="@string/new_database_summary"
            android:title="@string/new_database" />

        <MultiSelectListPreference
            android:id="@+id/database_manager"
            android:dialogTitle="@string/pref_db_manager_title"
            android:summary="@string/pref_db_manager_summary"
            android:key="manage_db"
            android:title="@string/pref_db_manager_title"
            android:positiveButtonText="@string/delete" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_title_default_parameters"
        app:icon="@drawable/ic_baseline_settings_black_24">
        <ListPreference
            android:id="@+id/category_withdrawal"
            android:defaultValue="0"
            android:key="category_withdrawal"
            android:summary="@string/default_category_withdrawal_summary"
            android:title="@string/default_category_withdrawal" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_title_api_configuration"
        app:icon="@drawable/ic_baseline_https_black_24">
        <EditTextPreference
            android:id="@+id/oer_api_key"
            android:defaultValue=""
            android:enabled="true"
            android:key="oer_apikey_edit_text"
            android:summary="@string/oer_api_key_summary"
            android:title="@string/oer_api_key_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_title_import_export"
        app:icon="@drawable/ic_baseline_import_export_black_24">
        <EditTextPreference
            android:id="@+id/export_filename"
            android:defaultValue="tmh.db"
            android:enabled="true"
            android:key="export_filename"
            android:summary="@string/export_db_summary"
            android:title="@string/export_db_title" />
        <org.maupu.android.tmh.dialog.ImportDBDialogPreference
            android:id="@+id/import_db"
            android:dialogMessage="@string/import_db_summary"
            android:key="import_db"
            android:negativeButtonText="@string/cancel"
            android:positiveButtonText="ok"
            android:summary="@string/import_db_summary"
            android:title="@string/import_db_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_backup_category"
        android:key="backup_category"
        app:icon="@drawable/ic_baseline_backup_black_24">

        <SwitchPreference
            android:defaultValue="false"
            android:key="gdrive_activate"
            android:title="@string/pref_gdrive_activate" />

        <EditTextPreference
            android:defaultValue="Default value"
            android:key="edit_text_preference_1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Edit text preference" />

        <org.maupu.android.tmh.dialog.GDriveBackupDialogPreference
            android:id="@+id/gdrive_configure"
            android:key="gdrive_configure"
            android:positiveButtonText=""
            android:negativeButtonText="" />
    </PreferenceCategory>
</PreferenceScreen>
