<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root_footer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dip"
    android:background="@android:color/background_light"
    android:orientation="horizontal"
    android:padding="0dip"
    android:visibility="visible">

    <Button
        android:id="@+id/button_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dip"
        android:layout_marginTop="4dip"
        android:layout_marginRight="2dip"
        android:layout_marginBottom="0dip"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_baseline_edit_24"
        android:enabled="false"
        android:padding="5dip"
        android:text="@string/edit" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dip"
        android:layout_marginLeft="2dip"
        android:layout_marginRight="2dip"
        android:layout_marginTop="4dip"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_baseline_refresh_24"
        android:enabled="false"
        android:visibility="visible"
        android:padding="5dip"
        android:text="@string/update" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dip"
        android:layout_marginTop="4dip"
        android:layout_marginRight="2dip"
        android:layout_marginBottom="0dip"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_baseline_delete_24"
        android:enabled="false"
        android:padding="5dip"
        android:text="@string/delete" />

</LinearLayout>
