<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="3dp"
            android:text="@string/dialog_choose_icon"
            android:textSize="20dip" />

        <TextView
            android:id="@+id/hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/text1"
            android:layout_marginTop="20dip"
            android:text="@string/hint_flag_autocompletion"
            android:textColor="@android:color/darker_gray"
            android:textSize="12dp"
            android:textStyle="italic" />

        <LinearLayout
            android:id="@+id/layout_autotext"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/hint"
            android:orientation="horizontal">

            <org.maupu.android.tmh.ui.widget.AutoCompleteTextViewIcon
                style="@style/TmhMaterialEditText"
                android:id="@+id/edit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:inputType="text|textAutoCorrect|textAutoComplete"
                android:hint="@string/country"
                android:maxLines="1" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
