<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dip"
        android:layout_marginRight="3dip"
        android:orientation="vertical">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/pref_dialog_db_filename_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_import_db_filename" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dip"
            android:layout_marginRight="3dip"
            android:orientation="horizontal">

            <com.rengwuxian.materialedittext.MaterialEditText
                style="@style/TmhMaterialEditText"
                android:id="@+id/db_filename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:selectAllOnFocus="true"
                android:inputType="text" />

            <Button
                android:id="@+id/pref_dialog_button_browse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/browse" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dip"
        android:layout_marginRight="3dip"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pref_dialog_db_name_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_import_db_name" />

        <com.rengwuxian.materialedittext.MaterialEditText
            style="@style/TmhMaterialEditText"
            android:id="@+id/db_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            android:inputType="text" />
    </LinearLayout>

</LinearLayout>
